[gd_scene load_steps=4 format=3 uid="uid://o8qprjor0l42"]

[ext_resource type="Texture2D" uid="uid://c6fw80q6yrwrj" path="res://level_select.png" id="1_4g4fc"]
[ext_resource type="Script" path="res://level_select.gd" id="1_27ea1"]
[ext_resource type="Texture2D" uid="uid://d1363ovw0a7lw" path="res://back_button.png" id="3_0lu7r"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27ea1")

[node name="LevelSelect" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_4g4fc")
metadata/_edit_lock_ = true

[node name="ErrorLevel" type="Button" parent="."]
layout_mode = 0
offset_right = 384.0
offset_bottom = 648.0
metadata/_edit_lock_ = true

[node name="EnchantedLevel" type="Button" parent="."]
offset_left = 384.0
offset_right = 768.0
offset_bottom = 648.0
metadata/_edit_lock_ = true

[node name="MazeLevel" type="Button" parent="."]
offset_left = 768.0
offset_right = 1152.0
offset_bottom = 648.0
metadata/_edit_lock_ = true

[node name="BackButton" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 272.0
offset_top = 512.0
offset_right = 880.0
offset_bottom = 720.0
scale = Vector2(0.141427, 0.141427)
pivot_offset = Vector2(304, 104)
icon = ExtResource("3_0lu7r")

[connection signal="pressed" from="ErrorLevel" to="." method="_on_error_level_pressed"]
[connection signal="pressed" from="EnchantedLevel" to="." method="_on_enchanted_level_pressed"]
[connection signal="pressed" from="MazeLevel" to="." method="_on_maze_level_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
